Almacenamiento de renta

--- a/Backend-Bodegas/.gitignore
+++ b/Backend-Bodegas/.gitignore
@@ -12,7 +12,9 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
+.application.properties
+.application-dev.propertiesv
+.application-prod.properties
 ### IntelliJ IDEA ###
 .idea
 *.iws
